<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">129199171153011</string>
    <string name="fb_login_protocol_scheme">fb129199171153011</string>

    <string name="app_name">Bancuri bune</string>
    <string name="add_joke">Adauga banc</string>
    <string name="added_by_label">"Adaugat de: "</string>
    <string name="add_limit_reached">Ai ajuns la limita de %s adaugari pe zi. Revino maine pentru a adauga un banc nou.</string>
    <string name="add_success">Am adaugat bancul cu success! El va fi vizibil in scurt timp in aplicatie.</string>
    <string name="add_failed">Nu am putut adauga bancul. Te rog sa incerci mai tarziu.</string>
    <string name="my_jokes_title">Bancurile mele</string>
...
    <string name="hint_email">Email</string>
    <string name="hint_password">Parola</string>
    <string name="email_missing">Te rog sa introduci o adresa de mail</string>
    <string name="email_invalid">Nu pare sa fie o adresa de email valida</string>
    <string name="password_missing">Parola lipseste!</string>
    <string name="password_minimum">Parola este prea scurta, minim 6 caractere</string>
    <string name="login">Login</string>
    <string name="hint_password_confirm">Confirma parola</string>
    <string name="password_not_matching">Parola nu este aceeasi</string>
    <string name="password_forgot">Parola uitata</string>
    <string name="forgot_password">Ai uitat parola?</string>
    <string name="forgot_password_msg">Te rog sa introduci mailul tau ca sa iti trimitem instructiunile de resetare</string>
    <string name="btn_reset_password">Reseteaza</string>
...
